# admin_bot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  IMPROVEMENTS.md  README.md  admin_bot_rules.md  pyproject.toml  run.py
app/: __init__.py  main.py
app/ai/: __init__.py
app/ai/agents/: __init__.py  answer.py  triage.py
app/ai/clients/: __init__.py  gemini.py
app/ai/knowledge/: __init__.py  markdown_store.py
app/ai/orchestration/: __init__.py  group_message_orchestrator.py
app/ai/prompts/: __init__.py  answer.md  triage.md
app/api/: deps.py
app/core/: __init__.py  abuse_config.py  ai_config.py  config.py  exceptions.py  logging.py  security.py  spam_config.py  telegram_config.py
app/databases/: __init__.py  sqlite.py
app/models/: __init__.py  base.py  chat.py  chat_member.py  faq.py  group_action.py  incoming_message.py  partner.py
app/repositories/: __init__.py  base.py  chat_log.py  chat_member.py  faq.py  partner.py  pending_question.py  spam_log.py
app/schemas/: __init__.py  telegram.py
app/services/: __init__.py  abuse.py  spam.py
app/telegram/: __init__.py  bot.py
app/utils/: exchange.py  logging.py  text.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  STRUCTURE.md
tests/: test_ai_agents.py  test_app_startup.py  test_group_handler.py  test_group_message_orchestrator.py  test_group_service.py  test_group_service_pending.py  test_markdown_knowledge.py  test_mention_targets.py  test_pending_question_repository.py  test_proxy_settings.py  test_spam_service.py  test_structure.py  test_telegram_bot_lifecycle.py
(+18 files in other folders)
